[gd_scene load_steps=39 format=3 uid="uid://b73pei0h6k2g6"]

[ext_resource type="Script" uid="uid://dnufoyfkpvy2r" path="res://Scripts/Player/player.gd" id="1_cvnsp"]
[ext_resource type="PackedScene" uid="uid://5pr4cb4dyloq" path="res://Scenes/fireball.tscn" id="2_6t5aa"]
[ext_resource type="Resource" uid="uid://ba62vsuc1w7hu" path="res://Scripts/Inventory/player_inv.tres" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://bnf0ht1mvi1vr" path="res://Assets/GODOT_Assets/sprites/Voleur_char.png" id="4_fkybt"]
[ext_resource type="PackedScene" uid="uid://cqda512cyfdid" path="res://Scripts/Inventory/inv_ui.tscn" id="5_fkybt"]
[ext_resource type="Script" uid="uid://djegy1o85x1kf" path="res://Scripts/Player/attack_area.gd" id="6_x3wgy"]
[ext_resource type="PackedScene" uid="uid://cny6hnrvv85h" path="res://Scenes/healthbar.tscn" id="7_3smsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("4_fkybt")
region = Rect2(50, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("4_fkybt")
region = Rect2(100, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("4_fkybt")
region = Rect2(150, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("4_fkybt")
region = Rect2(200, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("4_fkybt")
region = Rect2(250, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("4_fkybt")
region = Rect2(300, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("4_fkybt")
region = Rect2(50, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("4_fkybt")
region = Rect2(100, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("4_fkybt")
region = Rect2(150, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("4_fkybt")
region = Rect2(200, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("4_fkybt")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("4_fkybt")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("4_fkybt")
region = Rect2(350, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("4_fkybt")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("4_fkybt")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("4_fkybt")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("4_fkybt")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("4_fkybt")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("4_fkybt")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("4_fkybt")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("4_fkybt")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("4_fkybt")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("4_fkybt")
region = Rect2(250, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_x3wgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": false,
"name": &"Attack1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}],
"loop": false,
"name": &"Dodge",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vlem"]
radius = 4.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkybt"]
radius = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8erm5"]
bg_color = Color(0.07, 0.07, 0.07, 1)

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_cvnsp")
fireball_scene = ExtResource("2_6t5aa")
inv = ExtResource("3_vgqql")
max_health = 15

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -10)
scale = Vector2(0.896947, 0.771061)
sprite_frames = SubResource("SpriteFrames_x3wgy")
animation = &"Attack1"
autoplay = "Idle"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_3vlem")

[node name="Dodge_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Can_dodge_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(4, -10)

[node name="Inv_ui" parent="." instance=ExtResource("5_fkybt")]
offset_left = -80.0
offset_top = -141.0
offset_right = 81.0
offset_bottom = -27.0

[node name="Attack_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("6_x3wgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_area"]
position = Vector2(7, -8)
shape = SubResource("CapsuleShape2D_fkybt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("7_3smsa")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -37.0
offset_right = 118.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_8erm5")
script = null

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Dodge_timer" to="." method="_on_dodge_timer_timeout"]
[connection signal="timeout" from="Can_dodge_timer" to="." method="_on_can_dodge_timer_timeout"]
[connection signal="body_entered" from="Attack_area" to="." method="_on_attack_area_body_entered"]
